adding auth to tracker page
