# routes/auth.js
@@ -1,0 +1,6 @@
+import express from 'express';
+import { register, login } from '../controllers/auth.js';
+const router = express.Router();
+router.post('/register', register);
+router.post('/login', login);
+export default router;
